--- a/applications/multinomial_logistic_regression/entropy/quarto/iter_report.qmd
+++ b/applications/multinomial_logistic_regression/entropy/quarto/iter_report.qmd
@@ -2,7 +2,7 @@
 title: "Iteration Report"
 format: 
   html:
-    embed-resources: true
+    self-contained: true
 params:
   experiment: null
   X1_levels: null
