--- a/applications/multinomial_logistic_regression/entropy/quarto/iter_report.qmd
+++ b/applications/multinomial_logistic_regression/entropy/quarto/iter_report.qmd
@@ -2,7 +2,7 @@
 title: "Iteration Report"
 format: 
   html:
-    self-contained: true
+    embed-resources: true
 params:
   experiment: null
   X1_levels: null
@@ -47,7 +47,7 @@ miceadds::source.all(common_helpers_dir, print.source = FALSE)
 ```
 
 ```{r echo=FALSE, results="asis"}
-header <- paste("###", "Experiment", exp_id, "— Simulation", sim_id, "— Iteration", iter_id)
+header <- paste("####", "Experiment", exp_id, "— Simulation", sim_id, "— Iteration", iter_id)
 cat(header)
 ```
 
