--- a/applications/multinomial_logistic_regression/shared_effect/quarto/sim_report.qmd
+++ b/applications/multinomial_logistic_regression/shared_effect/quarto/sim_report.qmd
@@ -20,6 +20,11 @@ library(zeallot)
 library(yaml)
 
 # -------------------------------
+# ✅ Establish project root
+# -------------------------------
+project_root <- rprojroot::find_root(rprojroot::has_file("Makefile"))
+
+# -------------------------------
 # ✅ Load params from config
 # -------------------------------
 list2env(params, envir = environment())
@@ -30,7 +35,6 @@ exp_id <- experiment$id
 # -------------------------------
 # ✅ Define paths
 # -------------------------------
-project_root <- rprojroot::find_root(rprojroot::has_file("Makefile"))
 exp_dir <- file.path(project_root, "experiments", exp_id)
 true_params_dir <- file.path(exp_dir, "true_params")
 sim_dir <- file.path(exp_dir, "simulations", sim_id)
@@ -101,54 +105,53 @@ cat(header)
 cat("\n")
 cat(paste("True Entropy:", round(psi_0, 3)))
 cat("\n\n")
-cat(paste("Number of Skipped Directories for MLE:", num_skipped_MLE))
+cat(paste("Number of Simulations:", length(iter_dirs)))
 cat("\n\n")
-cat(paste("Number of Skipped Directories for CI:", num_skipped_CI))
+cat(paste("Number of Failed Simulations for MLE:", num_skipped_MLE))
+cat("\n\n")
+cat(paste("Number of Failed Simulations for CI:", num_skipped_CI))
 ```
 
 ```{r}
 #| echo: false
-# --- Step 1: MLE block ---
-mle_rows <- mle_summary_df |>
+mle_summary_df |>
   select(Metric = Source, Bias = bias, SD = sd, RMSE = rmse) |>
   pivot_longer(-Metric, names_to = "Stat", values_to = "Value") |>
   pivot_wider(names_from = Metric, values_from = Value) |>
-  mutate(Metric = Stat, Level = "-") |>
-  select(Metric, Level, Integrated, Profile)
-
-# --- Step 2: CI block with metric groupings ---
-ci_rows <- ci_summary_df |>
-  mutate(
-    Level = confidence,
-    Coverage = coverage_rate,
-    Length = mean_length
-  ) |>
-  select(Method = pseudolikelihood, Level, Coverage, Length) |>
-  pivot_longer(cols = c(Coverage, Length), names_to = "Metric", values_to = "Value") |>
-  pivot_wider(names_from = Method, values_from = Value) |>
-  select(Metric, Level, Integrated, Profile) |> 
-  arrange(Metric)
-
-# --- Step 3: Combine and display ---
-summary_tbl <- bind_rows(mle_rows, ci_rows) 
-
-kbl(summary_tbl, 
-    caption = "Simulation Results",
-    digits = 3, 
-    align = "ccccc") |>
+  mutate(Metric = Stat) |>
+  select(Metric, Integrated, Profile) |> 
+  kbl(caption = "MLE Comparison Table",
+      digits = 3, 
+      align = "ccccc") |>
   kable_styling(position = "center",
                 font_size = 18,
                 html_font = "Arial") |> 
   row_spec(row = 0, background = "#222831", color = "#76ABAE") |> 
-  column_spec(1:4, color = "#EEEEEE", extra_css = "background-color: #222831; vertical-align:middle;") |> 
-  column_spec(1, bold = TRUE) |> 
-  collapse_rows(columns = 1, valign = "middle") |> 
-  pack_rows("MLE", 1, 3, label_row_css = "vertical-align:middle; background-color: #31363F; color: #76ABAE;", indent = FALSE) |>
-  pack_rows("Confidence Interval", 4, 9, label_row_css = "vertical-align:middle; background-color: #31363F; color: #76ABAE;", indent = FALSE)
+  column_spec(1:3, color = "#EEEEEE", extra_css = "background-color: #222831; vertical-align:middle;") |> 
+  column_spec(1, bold = TRUE)
 ```
 
+```{r}
+#| echo: false
+col_names = c("CI Level", "Pseudolikelihood", "Coverage (%)", "Mean Width", "Median Width", "Valid (%)")
 
-
+ci_summary_df |>
+  select(confidence, pseudolikelihood, coverage_rate, mean_width, median_width, valid_rate) |> 
+  mutate(coverage_rate = coverage_rate * 100, 
+         valid_rate = valid_rate * 100) |> 
+  arrange(confidence) |> 
+  kbl(caption = "Confidence Interval Comparison Table",
+      digits = c(0, 0, 1, 3, 3, 1), 
+      align = "ccccc",
+      col.names = col_names) |>
+  kable_styling(position = "center",
+                font_size = 18,
+                html_font = "Arial") |> 
+  row_spec(row = 0, background = "#222831", color = "#76ABAE") |> 
+  column_spec(1:length(col_names), color = "#EEEEEE", extra_css = "background-color: #222831; vertical-align:middle;") |>
+  column_spec(1:2, bold = TRUE) |> 
+  collapse_rows(columns = 1, valign = "middle")
+```
 
 
 
