--- a/applications/poisson/group_rates_weighted_sum/fixed_effects_varying_slope/quarto/sim_report.qmd
+++ b/applications/poisson/group_rates_weighted_sum/fixed_effects_varying_slope/quarto/sim_report.qmd
@@ -6,11 +6,8 @@ format:
 params:
   sim_id: null
   experiment: null
-  seed: null
+  data_generation: null
   model: null
-  exposure: null
-  weights: null
-  evaluation: null
   optimization_specs: null
 ---
 
@@ -33,7 +30,6 @@ project_root <- rprojroot::find_root(rprojroot::has_file("Makefile"))
 list2env(params, envir = environment())
 app_name <- experiment$app
 estimand <- experiment$estimand
-model <- experiment$model
 exp_id <- experiment$id
 
 # -------------------------------
@@ -43,21 +39,20 @@ exp_dir <- file.path(project_root, "experiments", exp_id)
 true_params_dir <- file.path(exp_dir, "true_params")
 sim_dir <- file.path(exp_dir, "simulations", sim_id)
 iter_dirs <- list.dirs(sim_dir, recursive = FALSE)
-model_helpers_dir <- file.path(project_root, "applications", app_name, estimand, model, "scripts", "helpers")
+estimand_helpers_dir <- file.path(project_root, "applications", app_name, estimand, "scripts", "helpers")
 common_helpers_dir <- file.path(project_root, "common", "scripts", "helpers")
 
 # -------------------------------
 # ✅ Load helpers
 # -------------------------------
-miceadds::source.all(model_helpers_dir, print.source = FALSE)
+miceadds::source.all(estimand_helpers_dir, print.source = FALSE)
 miceadds::source.all(common_helpers_dir, print.source = FALSE)
 ```
 
 ```{r}
 #| include: false
 theta_0 <- readRDS(file.path(true_params_dir, "theta_0.rds"))
-weights <- readRDS(file.path(true_params_dir, "weights.rds"))
-psi_0 <- sum(theta_0 * weights)
+psi_0 <- theta_0$psi_0
 ```
 
 ```{r}
@@ -108,7 +103,7 @@ subtitle <- paste("Experiment", exp_id, "— Simulation", sim_id)
 header <- paste("##", subtitle)
 cat(header)
 cat("\n")
-cat(paste("True Weighted Sum:", round(psi_0, 3)))
+cat(paste("True Entropy:", round(psi_0, 3)))
 cat("\n\n")
 cat(paste("Number of Simulations:", length(iter_dirs)))
 cat("\n\n")
